# origin

./: .gitignore
cppm-hw-01-01/: cppm-hw-01-01.sln
cppm-hw-02-01/: cppm-hw-02-01.sln  readme.md
cppm-hw-02-02/: cppm-hw-02-02.sln  readme.md
cppm-hw-02-03/: cppm-hw-02-03.sln  readme.md
cppm-hw-03-01/: cppm-hw-03-01.cpp  cppm-hw-03-01.sln  cppm-hw-03-01.vcxproj
cppm-hw-03-02/: cppm-hw-03-02.cpp  cppm-hw-03-02.sln  cppm-hw-03-02.vcxproj
cppm-hw-04-01/: cppm-hw-04-01.cpp  cppm-hw-04-01.sln  cppm-hw-04-01.vcxproj
cppm-hw-04-02/: cppm-hw-04-02.cpp  cppm-hw-04-02.sln  cppm-hw-04-02.vcxproj
cppm-hw-05-01/: cppm-hw-05-01.cpp  cppm-hw-05-01.sln  cppm-hw-05-01.vcxproj
cppm-hw-05-02/: cppm-hw-05-02.cpp  cppm-hw-05-02.sln  cppm-hw-05-02.vcxproj
cppm-hw-05-03/: cppm-hw-05-03.cpp  cppm-hw-05-03.sln  cppm-hw-05-03.vcxproj
cppm-hw-06-01/: calc.cpp  calc.h  cppm-hw-06-01.cpp  cppm-hw-06-01.sln  cppm-hw-06-01.vcxproj
cppm-hw-06-02/: counter.cpp  counter.h  cppm-hw-06-02.cpp  cppm-hw-06-02.sln  cppm-hw-06-02.vcxproj
cppm-hw-06-03/: cppm-hw-06-03.sln  cppm-hw-06-03.vcxproj  quadrangles.h  triangles.cpp
cppm-hw-07-01/: cppm-hw-07-01.cpp  cppm-hw-07-01.sln  cppm-hw-07-01.vcxproj
cppm-hw-07-02/: cppm-hw-07-02.cpp  cppm-hw-07-02.sln  cppm-hw-07-02.vcxproj
cppm-hw-08-01/: cppm-hw-08-01.cpp  cppm-hw-08-01.sln  cppm-hw-08-01.vcxproj
cppm-hw-08-02/: cppm-hw-08-02.cpp  cppm-hw-08-02.sln  cppm-hw-08-02.vcxproj  exceptions.cpp  exceptions.h  figure.h  quadrangles.cpp  quadrangles.h  triangles.cpp  triangles.h
cppm-hw-10-02/: CMakeLists.txt  figure.cpp  triangles.h
(+34 files in other folders)
